--- a/index.html
+++ b/index.html
@@ -210,10 +210,6 @@
             data-bs-parent="#questions"
           >
             <div class="accordion-body">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-              beatae fuga animi distinctio perspiciatis adipisci velit maiores
-              totam tempora accusamus modi explicabo accusantium consequatur,
-              praesentium rem quisquam molestias at quos vero.
             </div>
           </div>
         </div>
@@ -235,10 +231,7 @@
             data-bs-parent="#questions"
           >
             <div class="accordion-body">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-              beatae fuga animi distinctio perspiciatis adipisci velit maiores
-              totam tempora accusamus modi explicabo accusantium consequatur,
-              praesentium rem quisquam molestias at quos vero.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             </div>
           </div>
         </div>
@@ -261,9 +254,7 @@
           >
             <div class="accordion-body">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-              beatae fuga animi distinctio perspiciatis adipisci velit maiores
-              totam tempora accusamus modi explicabo accusantium consequatur,
-              praesentium rem quisquam molestias at quos vero.
+              beatae 
             </div>
           </div>
         </div>
