--- a/index.html
+++ b/index.html
@@ -276,11 +276,7 @@
             data-bs-parent="#questions"
           >
             <div class="accordion-body">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-              beatae fuga animi distinctio perspiciatis adipisci velit maiores
-              totam tempora accusamus modi explicabo accusantium consequatur,
-              praesentium rem quisquam molestias at quos vero.
-            </div>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
           </div>
         </div>
         <!-- Item 5 -->
@@ -301,10 +297,7 @@
             data-bs-parent="#questions"
           >
             <div class="accordion-body">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-              beatae fuga animi distinctio perspiciatis adipisci velit maiores
-              totam tempora accusamus modi explicabo accusantium consequatur,
-              praesentium rem quisquam molestias at quos vero. 
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </div>
           </div>
         </div>
