--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
           >
             Close
           </button>
-          <button type="button" class="btn btn-primary">Submit</button>
+          <button type="button" class="btn btn-primary">Go</button>
         </div>
       </div>
     </div>
