--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
               />
               <h3 class="card-title mb-3">Sara Smith</h3>
               <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Lorem ipsum dolor sit.
               </p>
               <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
               <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
